...
          onTap: (pos) => setState(() => _indice = pos),
          backgroundColor: colorTarjeta,
          selectedItemColor: colorFuente,
          unselectedItemColor: colorGrisTexto,
          type: BottomNavigationBarType.fixed,
          items: [
            const BottomNavigationBarItem(icon: Icon(Icons.restaurant_menu), label: "Menú"),
            const BottomNavigationBarItem(icon: Icon(Icons.favorite_border), label: "Favoritos"),
            BottomNavigationBarItem(icon: iconoCarrito, label: "Carrito"),
            const BottomNavigationBarItem(icon: Icon(Icons.receipt_long_outlined), label: "Pedidos"),
          ],
        );
      },
...
